2001-02-16  Bart Schaefer  <schaefer@zsh.org>

	* 13495: Follow-up to 13492 to un-break "${(A)=foo=$@}".

2001-02-16  Sven Wischnowsky  <wischnow@zsh.org>

	* 13494: Completion/Core/compinit: make `compdef foo=bar' use the
 	service defined for `bar' if there is any
	
2001-02-16  Bart Schaefer  <schaefer@zsh.org>

	* 13492: Src/subst.c: Partial fix for ${1+"$@"} expanding to
	an array (still doesn't handle shwordsplit properly); fix so
	"${(A)foo=$@}" does *not* expand to an array, even though an
	array is assigned to $foo.

2001-02-14  Clint Adams  <schizo@debian.org>

	* unposted: Src/params.c: remove unused variable declaration.

	* 13478: Src/builtins.c: don't call dyncat with a NULL argument.

2001-02-14  Peter Stephenson  <pws@csr.com>

	* 13473: Makefile.in, Doc/Zsh/options.yo: small changes suggested
	in zsh-users/3524 for CSH_NULL_GLOB description and 13245 for
	cleaning config.modules.

2001-02-14  Clint Adams  <schizo@debian.org>

	* 13323: Functions/Zle/edit-command-line: handle
	multi-line buffers.

2001-02-13  Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru>

	* 13431: aczsh.m4,configure.in,Src/Modules/termcap.c,
	Src/Modules/termcap.mdd,Src/Modules/terminfo.c,
	Src/Modules/terminfo.mdd,Src/mkmakemod.sh: hopefully better
	check for shared libraries. Link in termcap/terminfo statically
	if shared libtermcap/libcurses unavailable

2001-02-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 13462: Src/Modules/zpty.c: try to make the -t option of zpty
 	smarter
	
	* 13459: Completion/Core/_path_files: wehn using glob_complete,
 	don't treat everything starting with a tilde as a pattern
	
2001-02-12  Bart Schaefer  <schaefer@zsh.org>

	* 13457: Completion/Core/compinit: Add `glob' to $_comp_options.

2001-02-09  Sven Wischnowsky  <wischnow@zsh.org>

	* 13450: Completion/Core/_multi_parts: two small fixes to
 	_multi_parts; one more place where a caller-supplied -S can be
 	used and fix for the code deciding which prefix to use
	