@@ -1,3 +1,9 @@
+2001-02-17  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>
+
+	* unposted: Doc/Zsh/metafaq.yo: site name change from Geoff.
+
+	* 13497: Src/pattern.c: `?##' didn't work.
+
 2001-02-16  Bart Schaefer  <schaefer@zsh.org>
 
 	* 13495: Follow-up to 13492 to un-break "${(A)=foo=$@}".
